fix: mailto: line breaks in Firefox

--- a/mailto/style.css
+++ b/mailto/style.css
@@ -1,3 +1,3 @@
 textarea {
-	white-space: nowrap;
+	white-space: pre;
 }
